Massive menu update